@@ -4,8 +4,9 @@
 
 #include <string.h>
 #include <stdlib.h>
+
+#include <glib/gi18n.h>
 #include <gtk/gtk.h>
-#include <libgnome/gnome-i18n.h>
 
 #include "clock.h"
 #include "clock-face.h"
